<resources>
    <string name="app_name">MP3Cutter</string>

    <!-- Errors -->
    <string name="error_unknown">Unknown error occurred!</string>
    <string name="error_bad_exception">Bad exception occurred!</string>
    <string name="error_action_denied">The requested action isn\'t allowed for this type of file!</string>
    <string name="error_sdcard_readonly">
        "Sorry, the SD Card is mounted as read-only and this app requires it to be writable."
    </string>
    <string name="error_sdcard_shared">
        "Sorry, this app can\'t run while your handset is mounted as a USB device."
    </string>
    <string name="error_no_sdcard">
        "Sorry, this app can\'t run unless you have an SD Card inserted."
    </string>

    <!-- Warnings -->
    <string name="warning_permission_denied">%1$s permission not granted!</string>

    <!-- Notices -->
    <string name="attention">Attention!</string>
    <string name="delete_alert">Are you sure you want to delete this file?</string>
    <string name="delete_success">The file deleted successfully!</string>
    <string name="delete_failed">Failed to delete the file!</string>
    <string name="irreversible_action">Be careful! This action is permanent and irreversible.</string>
    <string name="storage_permission_request">
        "In order for this app to scan your device's storage for audio media and display "
        "them for you to edit, you need to give this app storage permission.\n"
        "This is optional, you can ignore this notice and open the audio media by clicking "
        "the pin button on the main screen of the app.\n"
        "Also, whenever you want, you can give this permission to the app or revoke it from "
        "the app."
    </string>
    <string name="settings_permission_request">
        "In order for this app to be able to change the default %1$s of your device, you need to "
        "give this app change system settings permission.\n"
        "We only use this permission to change the ringtone and notification sound of the "
        "device and you can revoke it from the app whenever you want.\n"
        "You can also change the ringtone manually from your device settings."
    </string>
    <string name="contacts_permission_request">
        "In order for this app to be able to change the ringtone of your contacts, you need to "
        "give this app contacts permission.\n"
        "We only use this permission to change the ringtone of the contact selected by you and you "
        "can revoke it from the app whenever you want.\n"
    </string>
    <string name="set_default_success">"%1$s" was successfully set as default %2$s!</string>
    <string name="assign_contact_success">"%1$s" has been successfully assigned as "%2$s" ringtone!</string>
    <string name="copy_success">The path was successfully copied to the clipboard!</string>

    <!-- Actions -->
    <string name="action_dismiss_forever">Don\'t show again</string>
    <string name="action_grant">Grant</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_open">Open</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_record">Record new</string>
    <string name="action_about">About</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_privacy">Privacy policy</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_share_chooser">Share with…</string>
    <string name="action_info">Info</string>
    <string name="action_copy_path">Copy path</string>
    <string name="action_set_default">Set as default %1$s</string>
    <string name="action_assign_contact">Assign to contact</string>
    <string name="action_review">Write a review</string>
    <string name="action_apps">Other apps</string>
    <string name="action_website">Visit the website</string>
    <string name="action_email">Send email</string>
    <string name="action_code">Source code in GitHub</string>

    <!-- Permissions -->
    <string name="permission_storage">Storage</string>
    <string name="permission_settings">Change System Settings</string>
    <string name="permission_contacts">Contacts</string>

    <!-- Sound types -->
    <string name="type_music">Music</string>
    <string name="type_ringtone">Ringtone</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification sound</string>
    <string name="type_unknown">Unknown</string>

    <!-- Other -->
    <string name="unknown_artist">Unknown artist</string>
    <string name="dialog_information">
        <![CDATA[
        <h3>Title:</h3> %1$s<br>
        <h3>Album:</h3> %2$s<br>
        <h3>Artist:</h3> %3$s<br>
        <h3>Path:</h3> %4$s
        ]]>
    </string>
    <string name="dialog_about">Developed &amp; designed by Alireza Ivaz.</string>

</resources>